--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
                 <div v-else class="lose">Você perdeu :(</div>
             </div>
 
-            <div class="panel buttons"></div>
+            <div class="panel buttons">
+                <template v-if="running">
+                    <button class="btn attack">Ataque</button>
+                    <button class="btn especial-attack">Ataque Especial</button>
+                    <button class="btn heal">Curar</button>
+                    <button class="btn give-up">Desistir</button>
+                </template>
+
+                <button v-else class="btn new-game">Iniciar Jogo</button>
+            </div>
             <div class="panel logs"></div>
         </div>
 
