--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <button class="btn attack">Ataque</button>
                     <button class="btn especial-attack">Ataque Especial</button>
                     <button class="btn heal">Curar</button>
-                    <button class="btn give-up">Desistir</button>
+                    <button class="btn give-up" @click="giveUp">Desistir</button>
                 </template>
 
-                <button v-else class="btn new-game">Iniciar Jogo</button>
+                <button v-else class="btn new-game" @click="startGame">Iniciar Jogo</button>
             </div>
             <div class="panel logs"></div>
         </div>
